fixed-country-img-align

--- a/src/components/Country/Countries.css
+++ b/src/components/Country/Countries.css
@@ -18,6 +18,7 @@ img {
 .image-wrap {
   display: flex;
   gap: 15px;
+  justify-content: center;
 }
 
 .arrow {
